ajout de contenue sur la page de home

--- a/sites/all/themes/appco_zymphonies_theme/css/style.css
+++ b/sites/all/themes/appco_zymphonies_theme/css/style.css
@@ -70,7 +70,8 @@ table {
   webkit-box-sizing:border-box;
 }
 body {
-  background:url(../images/body-bg.png);
+  /*background:url(../images/body-bg.png);*/
+  background-color: #f5f5f5;
   color:#666;
   font-family:'PT Sans', sans-serif;
   font-size:15px;
