--- a/sites/all/themes/appco_zymphonies_theme/css/style.css
+++ b/sites/all/themes/appco_zymphonies_theme/css/style.css
@@ -71,7 +71,7 @@ table {
 }
 body {
   /*background:url(../images/body-bg.png);*/
-  background-color: #f5f5f5;
+  background-color: #efefef;
   color:#666;
   font-family:'PT Sans', sans-serif;
   font-size:15px;
